feat: Update Tariff module